# nexcore

./: .dockerignore  .gcloudignore  .gitignore  2026-02-04-local-command-caveatcaveat-the-messages-below-w.txt  2026-02-11-what-is-langlands-program.txt  2026-02-19-043055-implement-the-following-plan.txt  2026-02-23-102901-local-command-caveatcaveat-the-messages-below-w.txt  CLAUDE-workspace.md  CLAUDE.md  Cargo.lock.workspace-backup  Cargo.toml  Cargo.toml.workspace-backup  DEPLOY_RUNBOOK.md  Dockerfile  Dockerfile.api  Dockerfile.cloud  Dockerfile.slim  Dockerfile.template  LEXICON.md  LICENSE-APACHE  LICENSE-MIT  OPERATING_PROCEDURE.md  README.md  UNUSED_DEPS_AUDIT.md  anatomy_report.json  clippy.toml  clippy_output.json  clippy_report.txt  clippy_report_v2.txt  cloudbuild-api.yaml  cloudbuild.yaml  config.toml  core.true  deny.toml  deploy-cloudrun.sh  directive-004-phase-a-triple-audit.md  directive-005-audit.md  directive-005-crate-health-audit.md  directive-005-design.md  directive-005-results.md  (+14 more)
archive/claude-fs-mcp/: Cargo.toml  README.md
archive/claude-fs-mcp/src/: lib.rs  main.rs
archive/claude-repl-mcp/: Cargo.toml  README.md
archive/claude-repl-mcp/src/: lib.rs
archive/gsheets-mcp/: Cargo.toml
archive/gsheets-mcp/src/: lib.rs
archive/gvids-mcp/: Cargo.toml
archive/gvids-mcp/src/: auth.rs  main.rs  types.rs
archive/nexcore-bridge-mcp/: Cargo.toml
archive/nexcore-bridge-mcp/src/: lib.rs
archive/nexcore-browser-shell/: Cargo.toml  TODO.md
archive/nexcore-browser-shell/src/: grounding.rs  ipc.rs  lib.rs  main.rs
archive/nexcore-build-orchestrator/: Cargo.toml
archive/nexcore-build-orchestrator/src/: error.rs
archive/nexcore-control-center/: .dockerignore  Cargo.toml  Trunk.toml  ferrostack.toml  input.css
archive/nexcore-core/: Cargo.toml
archive/nexcore-core/src/: persistence.rs
archive/nexcore-docs-mcp/: Cargo.toml
archive/nexcore-error/: Cargo.toml
archive/nexcore-error/src/: lib.rs
archive/nexcore-macros/: Cargo.toml
archive/nexcore-os-demo/: Cargo.toml
archive/nexcore-os-demo/src/: main.rs
archive/reddit-mcp/: Cargo.toml
archive/reddit-mcp/src/: params.rs
archive/stem-bio/: Cargo.toml
archive/stem-bio/src/: grounding.rs  lib.rs
archive/stem-chem/: Cargo.toml
archive/stem-chem/src/: grounding.rs  lib.rs
crates/academy-forge/: Cargo.toml
crates/academy-forge/src/: error.rs  guidance.rs  ir.rs  lib.rs  research.rs  scaffold.rs
crates/academy-forge/tests/: integration.rs
crates/antitransformer/: CLAUDE.md  Cargo.toml  README.md  test_samples.json  test_samples.jsonl
crates/antitransformer/docs/: CONTRIBUTING.md  OVERVIEW.md
crates/antitransformer/src/: burstiness.rs  chemistry.rs  classify.rs  daemon.rs  entropy.rs  lib.rs  main.rs  pipeline.rs  tokenize.rs  zipf.rs
crates/bert-burn/: Cargo.toml
crates/bert-burn/checkpoints/: epoch_001_step_00006.json  epoch_001_step_00006_model.mpk  epoch_002_step_00012.json  epoch_002_step_00012_model.mpk  epoch_003_step_00018.json  epoch_003_step_00018_model.mpk  epoch_004_step_00024.json  epoch_004_step_00024_model.mpk  epoch_005_step_00030.json  epoch_005_step_00030_model.mpk  epoch_006_step_00036.json  epoch_006_step_00036_model.mpk  epoch_007_step_00042.json  epoch_007_step_00042_model.mpk  epoch_008_step_00048.json  epoch_008_step_00048_model.mpk  epoch_009_step_00054.json  epoch_009_step_00054_model.mpk  epoch_010_step_00060.json  epoch_010_step_00060_model.mpk
crates/bert-burn/meta/: leaderboard.json  live_status.json
crates/bert-burn/src/: checkpoint.rs  config.rs  data.rs  lib.rs  main.rs  meta.rs  model.rs  runner.rs  training.rs
crates/borrow-miner/: Cargo.toml
crates/borrow-miner/src/: grounding.rs  lib.rs  signals.rs  types.rs
crates/claude-fs-mcp/: Cargo.toml
crates/claude-fs-mcp/src/: lib.rs  main.rs
crates/claude-knowledge-mcp/: Cargo.toml
crates/claude-knowledge-mcp/src/: main.rs
crates/claude-mcp-config/: Cargo.toml  README.md
crates/claude-mcp-config/src/: lib.rs  main.rs
crates/claude-repl-mcp/: Cargo.toml
crates/claude-repl-mcp/src/: lib.rs  main.rs
crates/codex-mcp-config/: Cargo.toml
crates/codex-mcp-config/src/: lib.rs  main.rs
crates/compendious-machine/: Cargo.toml
crates/compendious-machine/src/: main.rs
crates/core-true/: Cargo.toml
crates/core-true/src/: lib.rs  main.rs
dna/: 2026-02-06-this-session-is-being-continued-from-a-previous-co.txt  Cargo.toml  GENOMIC_ORACLE.md  encoding-convergence.html
dna/examples/: arithmetic.dna  factorial.dna  factorial.dna.txt  fibonacci.dna  fibonacci.dna.txt  fizzbuzz_lite.dna.txt  hello.dna
dna/projects/dna-vocab-optimizer/: Cargo.toml
dna/src/: cortex.rs  error.rs  gene.rs  grounding.rs  lib.rs  proofs.rs  pv_theory.rs  string_theory.rs  tile.rs  vm.rs
dna/src/lang/: ast.rs  compiler.rs  mod.rs
wksp/: CLAUDE.md  Cargo.toml  ferrostack.toml  measure.json  measure_v2.json
wksp/.archived/: README.md
wksp/.archived/adventure-hud/: Cargo.toml  ferrostack.toml
wksp/.archived/borrow-miner/: Cargo.toml
wksp/.archived/education-machine/: ferrostack.toml
wksp/.archived/ferro-clicker/: Cargo.toml  ferrostack.toml
wksp/.archived/ferro-explore/: ferrostack.toml
wksp/.archived/integrity-calc/: Cargo.toml
wksp/.archived/nucleus/: Cargo.toml
wksp/.archived/sos/: .gitignore  Cargo.toml  capacitor.config.ts  package.json
wksp/.archived/wksp-api-client/: Cargo.toml
wksp/.archived/wksp-core/: Cargo.toml
wksp/apps/borrow-miner/: ferrostack.toml
wksp/apps/education-machine/: Cargo.toml
wksp/apps/ferro-explore/: Cargo.toml
wksp/apps/ncos/: CLAUDE.md  Cargo.toml
wksp/apps/nexcore-watch-app/: Cargo.toml
wksp/apps/nucleus/: tailwind.config.js
wksp/crates/wksp-components/: Cargo.toml
wksp/crates/wksp-types/: Cargo.toml
wksp/labs/antitransformer/: Cargo.toml
wksp/labs/counter-awareness/: Cargo.toml
wksp/labs/primitive-innovation/: Cargo.toml  INNOVATION_ANALYSIS.md
wksp/labs/transformer-primitives/: Cargo.toml
wksp/labs/word-spectroscopy/: Cargo.toml
wksp/sos/: Cargo.toml  index.html
wksp/sos/src/: app.rs
(+5720 files in other folders)
