[workspace]
members = [
    "crates/*",
    "tools/*",
]
exclude = [
    "crates/nexcore-claude-hooks",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
description = "NexVigilant Core (nexcore) — The Vigilance Kernel for pharmacovigilance and intelligent automation"
license = "LicenseRef-Proprietary"
repository = "https://github.com/nexvigilant/nexcore"

[workspace.dependencies]
# External Dependencies (sorted alphabetically)
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = { version = "0.8.0", features = ["macros", "ws"] }
base64 = "0.22.1"
burn = { version = "0.20", default-features = false, features = ["ndarray", "autodiff", "std"] }
burn-ndarray = { version = "0.20", features = ["std"] }
bytes = "1.6.1"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
colored = "3.0.0"
console_error_panic_hook = { version = "0.1" }
criterion = { version = "0.5", features = ["html_reports"] }
csv = "1.3.0"
darling = "0.20.10"
dashmap = "6.0.1"
dirs = "5.0.1"
flate2 = "1.0.30"
futures = "0.3.30"
glob = "0.3.1"
gloo-net = { version = "0.6" }
gloo-storage = { version = "0.3" }
hex = "0.4.3"
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
http = "1.1.0"
http-body-util = "0.1.2"
indexmap = "2.2.6"
js-sys = { version = "0.3" }
jsonwebtoken = "9"
lazy_static = "1.5.0"
leptos = { version = "0.7" }
leptos_axum = { version = "0.7" }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
nix = { version = "0.29", features = ["signal", "process", "fs", "mount", "reboot", "hostname"] }
notify = "8.2.0"
once_cell = "1.19.0"
ordered-float = { version = "4", features = ["serde"] }
phf = { version = "0.11.2", features = ["macros"] }
polars = { version = "0.44", features = ["lazy", "csv", "json"] }
proc-macro2 = "1.0.86"
proptest = "1.6.0"
quote = "1.0.36"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
rustyline = "14"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
syn = { version = "2.0.71", features = ["full"] }
tar = "0.4.41"
tempfile = "3.10.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tokenizers = "0.22"
toml = "0.8.15"
toml_edit = "0.22.16"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typenum = "1.17.0"
url = "2.5.2"
urlencoding = "2.1.3"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3" }

# Internal Workspace Dependencies (Platforms)
platforms = { path = "crates/platforms" }
platforms-api-client = { path = "crates/platforms-api-client" }
platforms-components = { path = "crates/platforms-components" }
platforms-core = { path = "crates/platforms-core" }
platforms-types = { path = "crates/platforms-types" }

# Internal Workspace Dependencies (Prima)
prima = { path = "crates/prima" }
prima-academy = { path = "crates/prima-academy" }
prima-chem = { path = "crates/prima-chem" }
prima-codegen = { path = "crates/prima-codegen" }
prima-mcp = { path = "crates/prima-mcp" }
prima-mcp-server = { path = "crates/prima-mcp-server" }
prima-pipeline = { path = "crates/prima-pipeline" }

# Internal Workspace Dependencies (NexCore)
academy-forge = { path = "crates/academy-forge" }
antitransformer = { path = "crates/antitransformer" }
core-true = { path = "crates/core-true" }
counter-awareness = { path = "crates/counter-awareness" }
disney-loop = { path = "crates/disney-loop" }
grounded = { path = "crates/grounded" }
lex-primitiva = { path = "crates/nexcore-lex-primitiva", package = "nexcore-lex-primitiva" }
mcp-relay = { path = "crates/mcp-relay" }
nexcloud = { path = "crates/nexcloud" }
nexcore-aggregate = { path = "crates/nexcore-aggregate" }
nexcore-algovigilance = { path = "crates/nexcore-algovigilance" }
nexcore-anatomy = { path = "crates/nexcore-anatomy" }
nexcore-antibodies = { path = "crates/nexcore-antibodies" }
nexcore-api = { path = "crates/nexcore-api" }
nexcore-audio = { path = "crates/nexcore-audio" }
nexcore-brain = { path = "crates/nexcore-brain" }
nexcore-browser = { path = "crates/nexcore-browser" }
nexcore-build-gate = { path = "crates/nexcore-build-gate" }
nexcore-caesura = { path = "crates/nexcore-caesura" }
nexcore-cardiovascular = { path = "crates/nexcore-cardiovascular" }
nexcore-ccp = { path = "crates/nexcore-ccp" }
nexcore-circulatory = { path = "crates/nexcore-circulatory" }
nexcore-clearance = { path = "crates/nexcore-clearance" }
nexcore-cloud = { path = "crates/nexcore-cloud" }
nexcore-combinatorics = { path = "crates/nexcore-combinatorics" }
nexcore-compilation-space = { path = "crates/nexcore-compilation-space" }
nexcore-compliance = { path = "crates/nexcore-compliance" }
nexcore-compositor = { path = "crates/nexcore-compositor" }
nexcore-config = { path = "crates/nexcore-config" }
nexcore-constants = { path = "crates/nexcore-constants" }
nexcore-cortex = { path = "crates/nexcore-cortex" }
nexcore-ctvp = { path = "crates/nexcore-ctvp" }
nexcore-cytokine = { path = "crates/nexcore-cytokine" }
nexcore-db = { path = "crates/nexcore-db" }
nexcore-declension = { path = "crates/nexcore-declension" }
nexcore-digestive = { path = "crates/nexcore-digestive" }
nexcore-dna = { path = "crates/nexcore-dna" }
nexcore-domain-primitives = { path = "crates/nexcore-domain-primitives" }
nexcore-downloads-scanner = { path = "crates/nexcore-downloads-scanner" }
nexcore-dtree = { path = "crates/nexcore-dtree" }
nexcore-edit-distance = { path = "crates/nexcore-edit-distance" }
nexcore-education-machine = { path = "crates/nexcore-education-machine" }
nexcore-energy = { path = "crates/nexcore-energy" }
nexcore-engram = { path = "crates/nexcore-engram" }
nexcore-error = { path = "crates/nexcore-error" }
nexcore-faers-etl = { path = "crates/nexcore-faers-etl" }
nexcore-forge-strategy = { path = "crates/nexcore-forge-strategy" }
nexcore-ghost = { path = "crates/nexcore-ghost" }
nexcore-grammar-lab = { path = "crates/nexcore-grammar-lab" }
nexcore-guardian-engine = { path = "crates/nexcore-guardian-engine" }
nexcore-harm-taxonomy = { path = "crates/nexcore-harm-taxonomy" }
nexcore-hook-lib = { path = "crates/nexcore-hook-lib" }
nexcore-hooks = { path = "crates/nexcore-hooks" }
nexcore-hormones = { path = "crates/nexcore-hormones" }
nexcore-id = { path = "crates/nexcore-id", features = ["serde"] }
nexcore-immunity = { path = "crates/nexcore-immunity" }
nexcore-insight = { path = "crates/nexcore-insight" }
nexcore-integumentary = { path = "crates/nexcore-integumentary" }
nexcore-integrity = { path = "crates/nexcore-integrity" }
nexcore-jeopardy = { path = "crates/nexcore-jeopardy" }
nexcore-knowledge = { path = "crates/nexcore-knowledge" }
nexcore-knowledge-engine = { path = "crates/nexcore-knowledge-engine" }
nexcore-laboratory = { path = "crates/nexcore-laboratory" }
nexcore-labs = { path = "crates/nexcore-labs" }
nexcore-lex-primitiva = { path = "crates/nexcore-lex-primitiva" }
nexcore-lymphatic = { path = "crates/nexcore-lymphatic" }
nexcore-mcp = { path = "crates/nexcore-mcp" }
nexcore-mcp-hot = { path = "crates/nexcore-mcp-hot" }
nexcore-measure = { path = "crates/nexcore-measure" }
nexcore-mesh = { path = "crates/nexcore-mesh" }
nexcore-model-checker = { path = "crates/nexcore-model-checker" }
nexcore-muscular = { path = "crates/nexcore-muscular" }
nexcore-nervous = { path = "crates/nexcore-nervous" }
nexcore-network = { path = "crates/nexcore-network" }
nexcore-nvrepl = { path = "crates/nexcore-guardian-cli" }
nexcore-orchestration = { path = "crates/nexcore-orchestration" }
nexcore-oracle = { path = "crates/nexcore-oracle" }
nexcore-organize = { path = "crates/nexcore-organize" }
nexcore-os = { path = "crates/nexcore-os" }
nexcore-pal = { path = "crates/nexcore-pal" }
nexcore-pal-linux = { path = "crates/nexcore-pal-linux" }
nexcore-perplexity = { path = "crates/nexcore-perplexity" }
nexcore-pharma-rd = { path = "crates/nexcore-pharma-rd" }
nexcore-pharmacovigilance = { path = "crates/nexcore-pharmacovigilance" }
nexcore-pharos = { path = "crates/nexcore-pharos" }
nexcore-phenotype = { path = "crates/nexcore-phenotype" }
nexcore-preemptive-pv = { path = "crates/nexcore-preemptive-pv" }
nexcore-prima = { path = "crates/nexcore-prima" }
nexcore-primitive-scanner = { path = "crates/nexcore-primitive-scanner" }
nexcore-primitives = { path = "crates/nexcore-primitives" }
nexcore-proof-of-meaning = { path = "crates/nexcore-proof-of-meaning" }
nexcore-pv-core = { path = "crates/nexcore-pv-core" }
nexcore-pvdsl = { path = "crates/nexcore-pvdsl" }
nexcore-pvos = { path = "crates/nexcore-pvos" }
nexcore-registry = { path = "crates/nexcore-registry" }
nexcore-renderer = { path = "crates/nexcore-renderer" }
nexcore-reproductive = { path = "crates/nexcore-reproductive" }
nexcore-respiratory = { path = "crates/nexcore-respiratory" }
nexcore-ribosome = { path = "crates/nexcore-ribosome" }
nexcore-sentinel = { path = "crates/nexcore-sentinel" }
nexcore-shell = { path = "crates/nexcore-shell" }
nexcore-signal-fence = { path = "crates/nexcore-signal-fence" }
nexcore-signal-theory = { path = "crates/nexcore-signal-theory" }
nexcore-signal-types = { path = "crates/nexcore-signal-types" }
nexcore-skeletal = { path = "crates/nexcore-skeletal" }
nexcore-skill-compiler = { path = "crates/nexcore-skill-compiler" }
nexcore-skill-exec = { path = "crates/nexcore-skill-exec" }
nexcore-skill-verify = { path = "crates/nexcore-skill-verify" }
nexcore-skills-engine = { path = "crates/nexcore-skills-engine" }
nexcore-social = { path = "crates/nexcore-social" }
nexcore-sop-anatomy = { path = "crates/nexcore-sop-anatomy" }
nexcore-softrender = { path = "crates/nexcore-softrender" }
nexcore-state-os = { path = "crates/nexcore-state-os" }
nexcore-state-theory = { path = "crates/nexcore-state-theory" }
nexcore-stoichiometry = { path = "crates/nexcore-stoichiometry" }
nexcore-statemind = { path = "crates/nexcore-statemind" }
nexcore-stdio-proxy = { path = "crates/nexcore-stdio-proxy" }
nexcore-synapse = { path = "crates/nexcore-synapse" }
nexcore-synth = { path = "crates/nexcore-synth" }
nexcore-telemetry-core = { path = "crates/nexcore-telemetry-core" }
nexcore-tov = { path = "crates/nexcore-tov" }
nexcore-tov-grounded = { path = "crates/nexcore-tov-grounded" }
nexcore-tov-proofs = { path = "crates/nexcore-tov-proofs" }
nexcore-transcriptase = { path = "crates/nexcore-transcriptase" }
nexcore-transform = { path = "crates/nexcore-transform" }
nexcore-trust = { path = "crates/nexcore-trust" }
nexcore-urinary = { path = "crates/nexcore-urinary" }
nexcore-value-mining = { path = "crates/nexcore-value-mining" }
nexcore-vault = { path = "crates/nexcore-vault" }
nexcore-vigil = { path = "crates/nexcore-vigil" }
nexcore-vigilance = { path = "crates/nexcore-vigilance" }
nexcore-viz = { path = "crates/nexcore-viz" }
nexcore-word = { path = "crates/nexcore-word" }
primitive-innovation = { path = "crates/primitive-innovation" }
pvos-primitive-expansion = { path = "crates/pvos-primitive-expansion" }
# Package renamed to nexcore-signal-pipeline, consumers import as `signal`
signal = { path = "crates/nexcore-signal-pipeline", package = "nexcore-signal-pipeline" }
skills = { path = "crates/skills" }
vr-compliance = { path = "crates/vr-compliance" }
vr-core = { path = "crates/vr-core" }
vr-tenant = { path = "crates/vr-tenant" }

# Internal Workspace Dependencies (Stem)
stem = { path = "crates/stem" }
stem-core = { path = "crates/stem-core" }
stem-math = { path = "crates/stem-math" }

[workspace.lints.rust]
unsafe_code = "forbid"
async_fn_in_trait = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_must_use = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Safety: deny unwrap/expect/panic workspace-wide
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Ergonomic allows (common false positives)
map_unwrap_or = "allow"
manual_map = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Pre-existing across workspace — allow to unblock validate-seq
needless_collect = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
should_implement_trait = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
used_underscore_binding = "allow"
implicit_hasher = "allow"
match_wildcard_for_single_variants = "allow"
match_same_arms = "allow"
single_match_else = "allow"
if_not_else = "allow"
redundant_else = "allow"
uninlined_format_args = "allow"
use_self = "allow"
default_trait_access = "allow"
trivially_copy_pass_by_ref = "allow"
enum_glob_use = "allow"
manual_string_new = "allow"
unnecessary_lazy_evaluations = "allow"
match_bool = "allow"
len_without_is_empty = "allow"
iter_without_into_iter = "allow"
from_over_into = "allow"
