[workspace]
members = [
    "crates/claude-knowledge-mcp",
    "crates/*",
    "tools/*",
]
exclude = [
    "crates/nexcore-claude-hooks",
    "crates/nexcore-hooks",
    "crates/word-spectroscopy",
    "crates/nexcore-bridge-mcp",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["NexVigilant Team <team@nexvigilant.com>"]
description = "NexVigilant Core (nexcore) — The Vigilance Kernel for pharmacovigilance and intelligent automation"
license = "LicenseRef-Proprietary"
repository = "https://github.com/nexvigilant/nexcore"

[workspace.dependencies]
# anyhow — REMOVED: replaced by nexcore-error
axum = { version = "0.8.0", features = ["macros", "ws"] }
# base64 — REPLACED by nexcore-codec (sovereignty campaign Phase 2)
burn = { version = "0.20", default-features = false, features = ["ndarray", "autodiff", "std"] }
burn-ndarray = { version = "0.20", features = ["std"] }
bytes = "1.6.1"
# candle-core = "0.9"
# candle-nn = "0.9"
# candle-transformers = "0.9"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }
# dirs — REPLACED by nexcore-fs::dirs (sovereignty campaign)
flate2 = "1.0.30"
futures = "0.3.30"
# glob — REPLACED by nexcore-fs::glob (sovereignty campaign)
# hex — REPLACED by nexcore-codec (sovereignty campaign Phase 2)
http-body-util = "0.1.2"
jsonwebtoken = "9"
# once_cell — REMOVED: migrated to std::sync::LazyLock (Rust 1.80+)
phf = { version = "0.11.2", features = ["macros"] }
proc-macro2 = "1.0.86"
proptest = "1.6.0"
quote = "1.0.36"
rand = "0.9.0"
rayon = "1.10"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
hmac = "0.12.1"
# slint = "1.9"
# slint-build = "1.9"
syn = { version = "2.0.71", features = ["full"] }
tar = "0.4.41"
tempfile = "3.10.1"
# thiserror = "1.0.61"  # REPLACED by nexcore-error + nexcore-error-derive
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.15"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }
# REPLACED by nexcore-id (sovereignty campaign Phase 1B)
# uuid = { version = "1.10.0", features = ["v4", "serde"] }
# walkdir — REPLACED by nexcore-fs::walk (sovereignty campaign)

# Internal Workspace Dependencies (Prima)
prima = { path = "crates/prima" }
prima-academy = { path = "crates/prima-academy" }
prima-chem = { path = "crates/prima-chem" }
prima-codegen = { path = "crates/prima-codegen" }
prima-mcp-server = { path = "crates/prima-mcp-server" }
prima-pipeline = { path = "crates/prima-pipeline" }

# Internal Workspace Dependencies (NexCore)
academy-forge = { path = "crates/academy-forge" }
antitransformer = { path = "crates/antitransformer" }
borrow-miner = { path = "crates/borrow-miner" }
core-true = { path = "crates/core-true" }
counter-awareness = { path = "crates/counter-awareness" }
disney-loop = { path = "crates/disney-loop" }
grounded = { path = "crates/grounded" }
integrity-calc = { path = "crates/integrity-calc" }
nexcloud = { path = "crates/nexcloud" }
nexcore-aggregate = { path = "crates/nexcore-aggregate" }
nexcore-algovigilance = { path = "crates/nexcore-algovigilance" }
nexcore-anatomy = { path = "crates/nexcore-anatomy" }
nexcore-antibodies = { path = "crates/nexcore-antibodies" }
nexcore-api = { path = "crates/nexcore-api" }
nexcore-audio = { path = "crates/nexcore-audio" }
nexcore-bicone = { path = "crates/nexcore-bicone" }
nexcore-brain = { path = "crates/nexcore-brain" }
nexcore-build-orchestrator = { path = "crates/nexcore-build-orchestrator" }
nexcore-browser = { path = "crates/nexcore-browser" }
nexcore-caesura = { path = "crates/nexcore-caesura" }
nexcore-cardiovascular = { path = "crates/nexcore-cardiovascular" }
nexcore-ccp = { path = "crates/nexcore-ccp" }
nexcore-circulatory = { path = "crates/nexcore-circulatory" }
nexcore-codec = { path = "crates/nexcore-codec" }
nexcore-clearance = { path = "crates/nexcore-clearance" }
nexcore-combinatorics = { path = "crates/nexcore-combinatorics" }
nexcore-compilation-space = { path = "crates/nexcore-compilation-space" }
nexcore-compliance = { path = "crates/nexcore-compliance" }
nexcore-compositor = { path = "crates/nexcore-compositor" }
nexcore-compound-registry = { path = "crates/nexcore-compound-registry" }
nexcore-config = { path = "crates/nexcore-config" }
nexcore-cognition = { path = "crates/nexcore-cognition" }
nexcore-cortex = { path = "crates/nexcore-cortex" }
nexcore-ctvp = { path = "crates/nexcore-ctvp" }
nexcore-cytokine = { path = "crates/nexcore-cytokine" }
nexcore-db = { path = "crates/nexcore-db" }
nexcore-declension = { path = "crates/nexcore-declension" }
nexcore-digestive = { path = "crates/nexcore-digestive" }
nexcore-dna = { path = "crates/nexcore-dna" }
nexcore-domain-primitives = { path = "crates/nexcore-domain-primitives" }
nexcore-downloads-scanner = { path = "crates/nexcore-downloads-scanner" }
nexcore-dtree = { path = "crates/nexcore-dtree" }
nexcore-edit-distance = { path = "crates/nexcore-edit-distance" }
nexcore-education-machine = { path = "crates/nexcore-education-machine" }
nexcore-energy = { path = "crates/nexcore-energy" }
nexcore-engram = { path = "crates/nexcore-engram" }
nexcore-error = { path = "crates/nexcore-error" }
nexcore-error-derive = { path = "crates/nexcore-error-derive" }
nexcore-faers-etl = { path = "crates/nexcore-faers-etl" }
nexcore-fhir = { path = "crates/nexcore-fhir" }
nexcore-firebase = { path = "crates/nexcore-firebase" }
nexcore-forge-strategy = { path = "crates/nexcore-forge-strategy" }
nexcore-fs = { path = "crates/nexcore-fs" }
nexcore-ghost = { path = "crates/nexcore-ghost" }
nexcore-grammar-lab = { path = "crates/nexcore-grammar-lab" }
nexcore-guardian-engine = { path = "crates/nexcore-guardian-engine" }
nexcore-harm-taxonomy = { path = "crates/nexcore-harm-taxonomy" }
nexcore-hash = { path = "crates/nexcore-hash" }
# nexcore-hooks — REMOVED 2026-02-22 (dead crate, see ~/.claude/hooks/archive/AUDIT-2026-02-22.md)
nexcore-hormones = { path = "crates/nexcore-hormones" }
nexcore-id = { path = "crates/nexcore-id", features = ["serde"] }
nexcore-immunity = { path = "crates/nexcore-immunity" }
nexcore-insight = { path = "crates/nexcore-insight" }
nexcore-integumentary = { path = "crates/nexcore-integumentary" }
nexcore-integrity = { path = "crates/nexcore-integrity" }
nexcore-jeopardy = { path = "crates/nexcore-jeopardy" }
nexcore-knowledge = { path = "crates/nexcore-knowledge" }
nexcore-knowledge-engine = { path = "crates/nexcore-knowledge-engine" }
nexcore-laboratory = { path = "crates/nexcore-laboratory" }
nexcore-labs = { path = "crates/nexcore-labs" }
nexcore-lex-primitiva = { path = "crates/nexcore-lex-primitiva" }
nexcore-lymphatic = { path = "crates/nexcore-lymphatic" }
nexcore-mcp-hot = { path = "crates/nexcore-mcp-hot" }
nexcore-measure = { path = "crates/nexcore-measure" }
nexcore-mesh = { path = "crates/nexcore-mesh" }
nexcore-model-checker = { path = "crates/nexcore-model-checker" }
nexcore-muscular = { path = "crates/nexcore-muscular" }
nexcore-nervous = { path = "crates/nexcore-nervous" }
nexcore-notebooklm = { path = "crates/nexcore-notebooklm" }
nexcore-openfda = { path = "crates/nexcore-openfda" }
nexcore-orchestration = { path = "crates/nexcore-orchestration" }
nexcore-oracle = { path = "crates/nexcore-oracle" }
nexcore-organize = { path = "crates/nexcore-organize" }
nexcore-os = { path = "crates/nexcore-os" }
nexcore-pal = { path = "crates/nexcore-pal" }
nexcore-pal-linux = { path = "crates/nexcore-pal-linux" }
nexcore-perplexity = { path = "crates/nexcore-perplexity" }
nexcore-pharma-rd = { path = "crates/nexcore-pharma-rd" }
nexcore-pharmacovigilance = { path = "crates/nexcore-pharmacovigilance" }
nexcore-pharos = { path = "crates/nexcore-pharos" }
nexcore-phenotype = { path = "crates/nexcore-phenotype" }
nexcore-primitive-scanner = { path = "crates/nexcore-primitive-scanner" }
nexcore-primitives = { path = "crates/nexcore-primitives" }
nexcore-preemptive-pv = { path = "crates/nexcore-preemptive-pv" }
nexcore-proof-of-meaning = { path = "crates/nexcore-proof-of-meaning" }
nexcore-pv-core = { path = "crates/nexcore-pv-core" }
nexcore-pvdsl = { path = "crates/nexcore-pvdsl" }
nexcore-pvos = { path = "crates/nexcore-pvos" }
nexcore-registry = { path = "crates/nexcore-registry" }
nexcore-renderer = { path = "crates/nexcore-renderer" }
nexcore-rh-proofs = { path = "crates/nexcore-rh-proofs" }
nexcore-reproductive = { path = "crates/nexcore-reproductive" }
nexcore-respiratory = { path = "crates/nexcore-respiratory" }
nexcore-ribosome = { path = "crates/nexcore-ribosome" }
nexcore-sentinel = { path = "crates/nexcore-sentinel" }
nexcore-signal-fence = { path = "crates/nexcore-signal-fence" }
nexcore-signal-theory = { path = "crates/nexcore-signal-theory" }
nexcore-signal-types = { path = "crates/nexcore-signal-types" }
nexcore-skeletal = { path = "crates/nexcore-skeletal" }
nexcore-skill-compiler = { path = "crates/nexcore-skill-compiler" }
nexcore-skill-exec = { path = "crates/nexcore-skill-exec" }
nexcore-skills-engine = { path = "crates/nexcore-skills-engine" }
nexcore-social = { path = "crates/nexcore-social" }
nexcore-sop-anatomy = { path = "crates/nexcore-sop-anatomy" }
nexcore-softrender = { path = "crates/nexcore-softrender" }
nexcore-state-os = { path = "crates/nexcore-state-os" }
nexcore-state-theory = { path = "crates/nexcore-state-theory" }
nexcore-stoichiometry = { path = "crates/nexcore-stoichiometry" }
nexcore-statemind = { path = "crates/nexcore-statemind" }
nexcore-synapse = { path = "crates/nexcore-synapse" }
nexcore-synth = { path = "crates/nexcore-synth" }
nexcore-telemetry-core = { path = "crates/nexcore-telemetry-core" }
nexcore-tov = { path = "crates/nexcore-tov" }
nexcore-tov-grounded = { path = "crates/nexcore-tov-grounded" }
nexcore-tov-proofs = { path = "crates/nexcore-tov-proofs" }
nexcore-transcriptase = { path = "crates/nexcore-transcriptase" }
nexcore-transform = { path = "crates/nexcore-transform" }
nexcore-trust = { path = "crates/nexcore-trust" }
nexcore-urinary = { path = "crates/nexcore-urinary" }
nexcore-value-mining = { path = "crates/nexcore-value-mining" }
nexcore-vault = { path = "crates/nexcore-vault" }
nexcore-vigil = { path = "crates/nexcore-vigil" }
nexcore-vigilance = { path = "crates/nexcore-vigilance" }
nexcore-viz = { path = "crates/nexcore-viz" }
nexcore-word = { path = "crates/nexcore-word" }
nexcore-zeta = { path = "crates/nexcore-zeta" }
nucli = { path = "crates/nucli" }
primitive-innovation = { path = "crates/primitive-innovation" }
pvos-primitive-expansion = { path = "crates/pvos-primitive-expansion" }
# Package renamed to nexcore-signal-pipeline, consumers import as `signal`
signal = { path = "crates/nexcore-signal-pipeline", package = "nexcore-signal-pipeline" }
skills = { path = "crates/skills" }
vr-core = { path = "crates/vr-core" }
vr-tenant = { path = "crates/vr-tenant" }
vr-billing = { path = "crates/vr-billing" }
vr-compliance = { path = "crates/vr-compliance" }
vr-marketplace = { path = "crates/vr-marketplace" }
vr-platform-ml = { path = "crates/vr-platform-ml" }

# Internal Workspace Dependencies (Stem)
stem = { path = "crates/stem" }
stem-complex = { path = "crates/stem-complex" }
stem-math = { path = "crates/stem-math" }
stem-phys = { path = "crates/stem-phys" }
stem-number-theory = { path = "crates/stem-number-theory" }
stem-topology = { path = "crates/stem-topology" }

[workspace.lints.rust]
unsafe_code = "forbid"
async_fn_in_trait = "allow"
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
unused_must_use = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Safety: deny unwrap/expect/panic workspace-wide
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Ergonomic allows (common false positives)
map_unwrap_or = "allow"
manual_map = "allow"
option_map_or_none = "allow"
derivable_impls = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
todo = "allow"
unimplemented = "allow"
unreachable = "allow"
multiple_crate_versions = "allow"
# New Rust 1.93 pedantic lints (mass migration deferred)
format_push_string = "allow"
case_sensitive_file_extension_comparisons = "allow"
manual_async_fn = "allow"
manual_div_ceil = "allow"
redundant_closure = "allow"
collapsible_if = "allow"
needless_for_each = "allow"
single_char_pattern = "allow"
cast_possible_wrap = "allow"
# once_cell → LazyLock migration (deferred)
type_complexity = "allow"
useless_format = "allow"
suboptimal_flops = "allow"
assigning_clones = "allow"
manual_is_power_of_two = "allow"
field_reassign_with_default = "allow"
redundant_pattern_matching = "allow"
let_and_return = "allow"
match_like_matches_macro = "allow"
iter_over_hash_type = "allow"
manual_is_ascii_check = "allow"
io_other_error = "allow"
manual_saturating_arithmetic = "allow"
clone_on_copy = "allow"
unnested_or_patterns = "allow"
non_std_lazy_statics = "allow"
or_fun_call = "allow"
unnecessary_map_or = "allow"
redundant_guards = "allow"
derive_partial_eq_without_eq = "allow"
needless_question_mark = "allow"
doc_lazy_continuation = "allow"
manual_clamp = "allow"
imprecise_flops = "allow"
manual_midpoint = "allow"
needless_range_loop = "allow"
explicit_iter_loop = "allow"
unreadable_literal = "allow"
redundant_continue = "allow"
trait_duplication_in_bounds = "allow"
repeat_vec = "allow"
sort_unstable = "allow"
cargo_common_metadata = "allow"
# Pre-existing across workspace — allow to unblock validate-seq
needless_collect = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
should_implement_trait = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
return_self_not_must_use = "allow"
manual_let_else = "allow"
redundant_closure_for_method_calls = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
similar_names = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
used_underscore_binding = "allow"
implicit_hasher = "allow"
match_wildcard_for_single_variants = "allow"
match_same_arms = "allow"
single_match_else = "allow"
if_not_else = "allow"
redundant_else = "allow"
uninlined_format_args = "allow"
use_self = "allow"
default_trait_access = "allow"
trivially_copy_pass_by_ref = "allow"
enum_glob_use = "allow"
manual_string_new = "allow"
unnecessary_lazy_evaluations = "allow"
match_bool = "allow"
len_without_is_empty = "allow"
iter_without_into_iter = "allow"
from_over_into = "allow"
